# edge-rtsp-object-detection

./: .bash_history  .gitignore  CMakeLists.txt  Dockerfile  README.md  progress_report.md  progress_report.md   set_env.sh  tdl_sdk
app/: CMakeLists.txt  hw_decode.cc  main.cc  multithread_ver.cc  rtsp_stream.cc  stream.h
cmake/: .ffmpeg.cmake.swp  .opencv.cmake.swp  app.cmake  bytetrack.cmake  cvi_mpi.cmake  cvi_tdl.cmake  ffmpeg.cmake  gstreamer.cmake  gsv.cmake  json.cmake  mjpeg.cmake  mqtt.cmake  nats.cmake  opencv.cmake  paddle.cmake  protobuf-c.cmake  riscv-toolchain.cmake  spdlog.cmake  yaml-cpp.cmake
cvi_mpi/: .gitmodules  mpi_param.mk
gvision/: CMakeLists.txt
gvision/AI/: detection.cc  detection.cpp  detection.h  detector.cc  detector.h
gvision/callback/: Callback.h
gvision/decoder/: CMakeLists.txt  DecoderAbstract.cc  DecoderAbstract.h  LibavDecodeContext.cc  LibavDecodeContext.h  LibavDecoder.cc  LibavDecoder.h  hw_decoder.cc  hw_decoder.h  libav_utils.cc  libav_utils.h
gvision/encoder/: hw_encoder.cc  hw_encoder.h
gvision/rtsp_reader/: rtsp_reader.cc  rtsp_reader.h
gvision/sys/: sys_init.cc  sys_init.h
gvision/utils/: cv_utils.cc  cv_utils.h  fs_utils.cc  fs_utils.h  g_utils.cc  g_utils.h  utils.cc  utils.h
tdl_sdk/modules/: CMakeLists.txt
tdl_sdk/sample_video/: CMakeLists.txt
